# lxnet_reader_pypi_package

./: README.md  pyproject.toml
integration_test/: demoLocal.py
integration_test/lxnet_reader_dev/: const.py  lxnet_reader.py
src/lxnet_reader/: lxnet_reader.py
tests/: test_lxnet_reader.py
